# ghost-mux

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Todo.md  implementation_plan.md  settings.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
ghost-mux-server/: Cargo.toml
ghost-mux-server/src/: main.rs
patches/: gpui-component.patch
patches/libghostty-vt-sys/: build.rs
src/: dashboard.rs  layout.rs  lsp.rs  main.rs  persist.rs  remote_api.rs  settings.rs
src/terminal/: mod.rs
tools/: setup-patches.ps1
tools/linux/: build-production.sh  dev-run-all.sh  dev-run-server.sh
tools/macos/: build-production.sh  dev-run-all.sh  dev-run-server.sh  run-production.sh
tools/windows/: build-production.ps1  dev-run-all.cmd  dev-run-all.ps1  dev-run-server.cmd  dev-run-server.ps1
web/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.js
web/src/: App.jsx  index.css  main.jsx
