[package]
name = "ghost-mux-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.9"
libghostty-vt = "0.1.1"
libghostty-vt-sys = { version = "0.1.1", features = ["vendored"] }

[patch.crates-io]
libghostty-vt-sys = { path = "../patches/libghostty-vt-sys" }
